--- a/php/static/css/custom.css
+++ b/php/static/css/custom.css
@@ -9,3 +9,7 @@ is easier to update the theme. Simply copy an existing
 style from style.css to this file, and modify it to 
 your liking.
 */
+
+.active { 
+	color: black;
+}
